--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
         <div>
             <ul>
-                <li><a href="" target="_blank">Twitter</a></li>
-                <li><a href="" target="_blank">Facebook</a></li>
-                <li><a href="" target="_blank">Github</a></li>
+                <li><a href="http://www.twitter.com" target="_blank">Twitter</a></li>
+                <li><a href="http://www.facebook.com" target="_blank">Facebook</a></li>
+                <li><a href="http://www.github.com/yeady88" target="_blank">Github</a></li>
             </ul>
         </div>
     </nav>
@@ -42,17 +42,17 @@
         <section id="recent-blogs">
             <div>
                 <h3>Recent Blogs</h3>
-                <div><img src="images/hudson-river-valley.jpg" alt="">
+                <div><img src="images/hudson-river-valley.jpg" alt="Hudson River">
                     <p>This is the Hudson River Valley in New York. Vinyl humblebrag tumeric neutra selfies photo booth
                         waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant coloring book,
                         distillery keytar asymmetrical truffaut echo park semiotics vinyl.</p>
                 </div>
-                <div><img src="images/fort-point-100x100.jpg" alt="">
+                <div><img src="images/fort-point-100x100.jpg" alt="Fort Point">
                     <p>Fort Point in San Francisco is a historic site. Vinyl humblebrag tumeric neutra selfies photo
                         booth waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant coloring
                         book, distillery keytar asymmetrical truffaut echo park semiotics vinyl.</p>
                 </div>
-                <div><img src="images/prince-william-forest.jpg" alt="">
+                <div><img src="images/prince-william-forest.jpg" alt="Prince Williams Forest">
                     <p>Prince William Forest is the located in Washington DC. Vinyl humblebrag tumeric neutra selfies
                         photo booth waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant
                         coloring book, distillery keytar asymmetrical truffaut echo park semiotics vinyl.</p>
@@ -91,10 +91,9 @@
                     <h4>About</h4>
                     <p>We are interested in providing information that inspires and enhances your travel experiences.
                     </p>
-                    <div>Click to Find Out More</div>
+                    <div><button>Click to Find Out More</button></div>
+                    </div>
                 </div>
-
-            </div>
         </section>
     </main>
     <footer>
