--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
     </header>
     <nav>
-        <div>
-            <ul>
-                <li><a href="#">Home</a></li>
+        <div class="nav-left">
+            <ul class="page-links">
+                <li><a class="active" href="#">Home</a></li>
                 <li><a href="#recent-blogs">Recent Blog</a></li>
                 <li><a href="#news-about">About</a></li>
             </ul>
         </div>
-        <div>
-            <ul>
+        <div class="nav-right">
+            <ul class="social-links">
                 <li><a href="http://www.twitter.com" target="_blank">Twitter</a></li>
                 <li><a href="http://www.facebook.com" target="_blank">Facebook</a></li>
                 <li><a href="http://www.github.com/yeady88" target="_blank">Github</a></li>
