--- a/index.html
+++ b/index.html
@@ -33,74 +33,78 @@
             </ul>
         </div>
     </nav>
-    <figure>
+    <figure class="big-image">
         <img src="images/backlit-clouds-dark-831x200.jpg" alt="Remarkable Place">
         <figcaption>Remarkable Place</figcaption>
     </figure>
     <main>
         <!-- recent blogs -->
-        <section id="recent-blogs">
-            <div>
-                <h3>Recent Blogs</h3>
-                <div><img src="images/hudson-river-valley.jpg" alt="Hudson River">
+        <section class="table" id="recent-blogs">
+            <h3>Recent Blogs</h3>
+            <div class="row">
+                <div class="col"><img class="wrapped" src="images/hudson-river-valley.jpg" alt="Hudson River">
                     <p>This is the Hudson River Valley in New York. Vinyl humblebrag tumeric neutra selfies photo booth
                         waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant coloring book,
                         distillery keytar asymmetrical truffaut echo park semiotics vinyl.</p>
                 </div>
-                <div><img src="images/fort-point-100x100.jpg" alt="Fort Point">
+                <div class="col"><img img class="wrapped" src="images/fort-point-100x100.jpg" alt="Fort Point">
                     <p>Fort Point in San Francisco is a historic site. Vinyl humblebrag tumeric neutra selfies photo
                         booth waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant coloring
                         book, distillery keytar asymmetrical truffaut echo park semiotics vinyl.</p>
-                </div>
-                <div><img src="images/prince-william-forest.jpg" alt="Prince Williams Forest">
+                    </div>
+
+                    <div class="col"><img img class="wrapped" src="images/prince-william-forest.jpg"
+                    alt="Prince Williams Forest">
                     <p>Prince William Forest is the located in Washington DC. Vinyl humblebrag tumeric neutra selfies
                         photo booth waistcoat kinfolk prism poke banh mi. Selvage gastropub flannel tumblr air plant
                         coloring book, distillery keytar asymmetrical truffaut echo park semiotics vinyl.</p>
-                </div>
-            </div>
-        </section>
-        <!-- about -->
-        <section id="news-about">
-            <h3>About</h3>
-            <div>
-                <div>
-                    <h4>News</h4>
-                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                        which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot,
-                        which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed
-                        in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be
-                        incapable of drawing a single stroke at the present moment; and yet I feel that I never was a
-                        greater artist than now.
-                    </p>
-                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                        which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot,
-                        which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed
-                        in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be
-                        incapable of drawing a single stroke at the present moment; and yet I feel that I never was a
-                        greater artist than now.
-
-                        When, while the lovely valley teems with vapour around me, and the meridian sun strikes the
-                        upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the
-                        inner sanctuary, I throw myself down among the tall grass by the trickling stream; and, as I lie
-                        close to the earth, a thousand unknown plants are noticed by me: when I hear the buzz of the
-                        little world among the stalks, and grow familiar with the countless indescribable forms of the
-                        insects and flies, then I feel the presence of the Almighty, who formed us in his own image, and
-                        the breath.</p>
-                </div>
-                <div>
-                    <h4>About</h4>
-                    <p>We are interested in providing information that inspires and enhances your travel experiences.
-                    </p>
-                    <div><button>Click to Find Out More</button></div>
                     </div>
                 </div>
         </section>
+        <!-- about -->
+        </section>
+        <section class="table" id="news-about">
+            <h3>About</h3>
+            <div class="row">
+                <div class="col">
+                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
+                        spring
+                        which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot,
+                        which was created for the bliss of souls like mine. I am so happy, my dear friend, so
+                        absorbed
+                        in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be
+                        incapable of drawing a single stroke at the present moment; and yet I feel that I never was
+                        a
+                        greater artist than now.</p>
+
+                    <p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the
+                        upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into
+                        the
+                        inner sanctuary, I throw myself down among the tall grass by the trickling stream; and, as I
+                        lie
+                        close to the earth, a thousand unknown plants are noticed by me: when I hear the buzz of the
+                        little world among the stalks, and grow familiar with the countless indescribable forms of
+                        the
+                        insects and flies, then I feel the presence of the Almighty, who formed us in his own image,
+                        and
+                        the breath.</p>
+
+                    <p>We are interested in providing information that inspires and enhances your travel
+                        experiences.</p>
+                </div>
+                <div class="col">
+                    <h4>News</h4>
+                    <p>We are interested in providing information that inspires and enhances your travel
+                        experiences.</p>
+                    <div class="cta"><button class="cta-button">Click to Find Out More</button></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="footer-left">Copyright &copy; 2019-20</div>
+        <div class="footer-right">Yasmine Eady</div>
     </footer>
-    <div>Copyright &copy; 2019-20</div>
-    <div>Yasmine Eady</div>
 </body>
 
 </html>
